--- a/suffix-array.cabal
+++ b/suffix-array.cabal
@@ -19,7 +19,8 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
---  exposed-modules:
+  exposed-modules:     Data.SuffixArray
+                     , Data.SuffixArray.Internal
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
