--- a/suffix-array.cabal
+++ b/suffix-array.cabal
@@ -38,6 +38,8 @@ test-suite suffix-array-test
   main-is:             Test.hs
   build-depends:       base
                      , suffix-array
+                     , tasty
+                     , tasty-quickcheck
   default-language:    Haskell2010
 
 source-repository head
