--- a/suffix-array.cabal
+++ b/suffix-array.cabal
@@ -29,6 +29,8 @@ benchmark suffix-array-bench
   hs-source-dirs:      bench
   main-is:             Bench.hs
   build-depends:       base
+                     , criterion
+                     , random
                      , suffix-array
   default-language:    Haskell2010
 
