--- a/suffix-array.cabal
+++ b/suffix-array.cabal
@@ -39,8 +39,10 @@ test-suite suffix-array-test
   hs-source-dirs:      test
   main-is:             Test.hs
   build-depends:       base
+                     , containers
                      , suffix-array
                      , tasty
+                     , tasty-hunit
                      , tasty-quickcheck
   default-language:    Haskell2010
 
