--- a/suffix-array.cabal
+++ b/suffix-array.cabal
@@ -21,7 +21,8 @@ library
   hs-source-dirs:      src
   exposed-modules:     Data.SuffixArray
                      , Data.SuffixArray.Internal
-  build-depends:       base >= 4.7 && < 5
+  build-depends:       array
+                     , base
   default-language:    Haskell2010
 
 benchmark suffix-array-bench
