--- a/suffix-array.cabal
+++ b/suffix-array.cabal
@@ -25,6 +25,15 @@ library
                      , base
   default-language:    Haskell2010
 
+executable suffix-array-exe
+  hs-source-dirs:      app
+  main-is:             App.hs
+  build-depends:       base
+                     , random
+                     , suffix-array
+  default-language:    Haskell2010
+  ghc-options:         -O2 -rtsopts
+
 benchmark suffix-array-bench
   type:                exitcode-stdio-1.0
   hs-source-dirs:      bench
