--- a/suffix-array.cabal
+++ b/suffix-array.cabal
@@ -24,6 +24,7 @@ library
   build-depends:       array
                      , base
   default-language:    Haskell2010
+  ghc-options:         -O2
 
 executable suffix-array-exe
   hs-source-dirs:      app
