--- a/suffix-array.cabal
+++ b/suffix-array.cabal
@@ -16,6 +16,7 @@ category:            Data Structures
 build-type:          Simple
 -- extra-source-files:  README.md
 cabal-version:       >=1.10
+tested-with:         GHC==7.8.4, GHC==7.10.2, GHC==7.10.3, GHC==8.0.1
 
 library
   hs-source-dirs:      src
