--- a/suffix-array.cabal
+++ b/suffix-array.cabal
@@ -22,8 +22,8 @@ library
   hs-source-dirs:      src
   exposed-modules:     Data.SuffixArray
                      , Data.SuffixArray.Internal
-  build-depends:       array
-                     , base
+  build-depends:       array >= 0.5 && < 0.6
+                     , base >= 4.7 && < 5
   default-language:    Haskell2010
   ghc-options:         -O2
 
@@ -40,8 +40,8 @@ benchmark suffix-array-bench
   hs-source-dirs:      bench
   main-is:             Bench.hs
   build-depends:       base
-                     , criterion
-                     , random
+                     , criterion >= 1.0 && < 1.2
+                     , random >= 1.0 && < 1.2
                      , suffix-array
   default-language:    Haskell2010
 
@@ -51,11 +51,11 @@ test-suite suffix-array-test
   main-is:             Test.hs
   build-depends:       array
                      , base
-                     , containers
+                     , containers >= 0.5 && < 0.6
                      , suffix-array
-                     , tasty
-                     , tasty-hunit
-                     , tasty-quickcheck
+                     , tasty >= 0.10 && < 0.12
+                     , tasty-hunit >= 0.9 && < 0.10
+                     , tasty-quickcheck >= 0.8 && < 0.9
   default-language:    Haskell2010
 
 source-repository head
